fix margin on mobile screens

--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,7 @@ button:hover {
   #weatherData,
   #forecastData {
     width: 90%;
+    margin-left: 5%;
   }
 
   .forecast-day {
